--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -9,8 +9,9 @@ on:
   push:
     tags_ignore:
       - '*'
+  pull_request:
   schedule:
-    - cron: '2 1 13 * *'
+    - cron: '51 12 13 * *'
 
 jobs:
   lint:
