--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
     namespace="robertdebock"
   matrix:
     - image="debian" tag="latest"
+    - image="debian" tag="bullseye"
     - image="ubuntu" tag="latest"
 
 cache:
