--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -11,7 +11,7 @@ on:
       - '*'
   pull_request:
   schedule:
-    - cron: '40 13 13 * *'
+    - cron: '39 20 13 * *'
 
 jobs:
   lint:
@@ -37,7 +37,7 @@ jobs:
           - image: "debian"
             tag: "bullseye"
           - image: "ubuntu"
-            tag: "latest"
+            tag: "1804"
     steps:
       - name: checkout
         uses: actions/checkout@v2
