--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -20,7 +20,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: molecule
-        uses: robertdebock/molecule-action@2.1.0
+        uses: robertdebock/molecule-action@2.2.0
         with:
           entrypoint: /usr/local/bin/molecule
           args: lint
@@ -37,7 +37,7 @@ jobs:
           - image: "debian"
             tag: "bullseye"
           - image: "ubuntu"
-            tag: "1804"
+            tag: "bionic"
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -48,7 +48,7 @@ jobs:
       - name: parse apparmor for mysql
         run: sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
       - name: molecule
-        uses: robertdebock/molecule-action@2.1.0
+        uses: robertdebock/molecule-action@2.2.0
         with:
           image: ${{ matrix.config.image }}
           tag: ${{ matrix.config.tag }}
