--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
   matrix:
     - image="debian" tag="latest"
     - image="debian" tag="bullseye"
-    - image="ubuntu" tag="1804"
+    - image="ubuntu" tag="bionic"
 
 cache:
   - pip
