--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,3 @@
----
 galaxy_info:
   author: Robert de Bock
   role_name: microsoft_repository_keys
@@ -8,11 +7,30 @@ galaxy_info:
   min_ansible_version: 2.8
 
   platforms:
+    - name: Alpine
+      versions:
+        - all
+    - name: Amazon
+      versions:
+        - 2018.03
+    - name: EL
+      versions:
+        - 7
+        - 8
     - name: Debian
+      versions:
+        - buster
+        - bullseye
+    - name: Fedora
+      versions:
+        - 31
+        - 32
+    - name: OpenSUSE
       versions:
         - all
     - name: Ubuntu
       versions:
+        - focal
         - bionic
 
   galaxy_tags:
