--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,3 +5,4 @@
 repository:
   description: Trust microsofts gpg keys
   homepage: https://robertdebock.nl/
+  topics: microsoftrepositorykeys, ansible, molecule, tox, playbook, hacktoberfest
