Moving to collections instead of modules shipped with Ansible.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for microsoft_repository_keys
 
 - name: add apt key
-  apt_key:
+  ansible.builtin.apt_key:
     url: "{{ microsoft_repository_keys_url }}"
     state: present
   when:
