--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   author: Robert de Bock
+  namespace: robertdebock
   role_name: microsoft_repository_keys
   description: Trust microsofts gpg keys
   license: Apache-2.0
