Introduce collections in molecule too.

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -8,13 +8,13 @@
     - name: install a test package
       block:
         - name: add apt repository packages-microsoft-com-yumrepos-azure-cli
-          apt_repository:
+          ansible.builtin.apt_repository:
             repo: "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ {{ ansible_distribution_release }} main"
             filename: "package-microsoft-com-repos-azure-cli"
             state: present
 
         - name: install azure-cli
-          package:
+          ansible.builtin.package:
             name: azure-cli
             state: present
       when:
