ansible-lint: All names should start with an uppercase letter.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for microsoft_repository_keys
 
-- name: add apt key
+- name: Add apt key
   ansible.builtin.apt_key:
     url: "{{ microsoft_repository_keys_url }}"
     state: present
