--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,4 +5,4 @@
   gather_facts: true
 
   roles:
-    - role: ansible-role-microsoft_repository_keys
+    - role: robertdebock.microsoft_repository_keys
