--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -9,53 +9,81 @@ on:
   push:
     branches:
       - master
-  pull_request:
   schedule:
     - cron: '25 13 13 * *'
 
 jobs:
   lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@v4
       - name: ansible-lint
-        uses: ansible-community/ansible-lint-action@main
-  test:
+        uses: ansible/ansible-lint@main
+
+  molecule:
     needs:
       - lint
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        config:
+        distro:
           - image: "alpine"
             tag: "latest"
           - image: "enterpriselinux"
-            tag: "8"
-          - image: "enterpriselinux"
             tag: "latest"
           - image: "debian"
             tag: "latest"
+          - image: "debian"
+            tag: "bookworm"
           - image: "debian"
             tag: "bullseye"
           - image: "fedora"
-            tag: "37"
-          - image: "opensuse"
-            tag: "latest"
+            tag: "39"
           - image: "ubuntu"
             tag: "latest"
+          - image: "ubuntu"
+            tag: "jammy"
           - image: "ubuntu"
             tag: "focal"
-          - image: "ubuntu"
-            tag: "bionic"
     steps:
       - name: checkout
         uses: actions/checkout@v4
         with:
-          path: "${{ github.repository }}"
-      - name: molecule
-        uses: robertdebock/molecule-action@6.0.1
+          path: ansible-role-microsoft_repository_keys
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          image: ${{ matrix.config.image }}
-          tag: ${{ matrix.config.tag }}
+          python-version: "3.*"
+
+      - name: Configure Docker for systemd
+        run: |
+          sudo mkdir -p /etc/docker
+          echo '{
+            "features": {
+              "buildkit": true
+            },
+            "exec-opts": ["native.cgroupdriver=systemd"]
+          }' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker || true
+
+      - name: Install Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip3 install ansible molecule molecule-plugins[docker] docker
+
+      - name: Test with molecule
+        run: |
+          cd ansible-role-microsoft_repository_keys
+          molecule test
+        env:
+          PY_COLORS: 1
+          ANSIBLE_FORCE_COLOR: 1
+          ANSIBLE_ROLES_PATH: ~/.ansible/roles:${GITHUB_WORKSPACE}/ansible-role-microsoft_repository_keys
+          image: ${{ matrix.distro.image }}
+          tag: ${{ matrix.distro.tag }}
