--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -7,14 +7,16 @@ name: "TODO 2 Issue"
 
 on:
   push:
+    branches:
+      - master
 
 jobs:
   build:
-    runs-on: "ubuntu-20.04"
+    runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v4
       - name: "TODO to Issue"
-        uses: "alstr/todo-to-issue-action@v2.3"
+        uses: "alstr/todo-to-issue-action@v4"
         id: "todo"
         with:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
